clearing done, around 100 lines from compact reduced, preatiy food if you ask me , and it's more open and flexible